2008-10-30  Helmut Eller  <heller@common-lisp.net>

	* swank-sbcl.lisp (wait-for-input): Return streams which are at
	EOF.

2008-10-30  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-popup-buffer-quit): Call bury-buffer with
	explicit argument for compatibility with XEmacs.

2008-10-30  Ivan Shvedunov <ivan4th@gmail.com>

	* slime.el (slime-repl-history-pattern): Use the part of input
	between its start and (point) as history search pattern.
	Previously we used the entire input.

2008-10-26  Helmut Eller  <heller@common-lisp.net>

	* test.sh: Return the number of failed tests as exit code.

	* slime.el: Fix change from 2008-10-20.
	Use (eval-when (compile)...) instead of (eval-when-compile ...),
	because the latter is more like (eval-when (compile eval) ...).

2008-10-23  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-redirect-inferior-output): New command.

2008-10-21  Helmut Eller  <heller@common-lisp.net>

	* swank-allegro.lisp (frame-restartable-p): Handle errors signaled
	by debugger:frame-retryable-p.  This looks like an Allegro
	bug, though.  Reported by Luke Hope.

2008-10-20  Helmut Eller  <heller@common-lisp.net>

	* slime.el: Require some packages, e.g. apropos, at compile time
	to suppress some "undefined function" warnings.

2008-10-19  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (frame-locals-and-catch-tags): New function.
	Fetch locals and catch tags with a single RPC.

	* slime.el (sldb-frame-details): Use it.

	* swank-backend.lisp (frame-catch-tags): Provide a default
	implementation.  Delete the dummy defs in various backends.

2008-10-19  Mark Evenson <evenson@panix.com>

	* swank-abcl.lisp (handle-compiler-warning): Report source
	location position when we can.
	Use NAMESTRING for *compile-filename*.

2008-10-19  Helmut Eller  <heller@common-lisp.net>

	* swank-clisp.lisp (filename-to-pathname, parse-cygwin-filename):
	Accept Windows and Unix filenames when :CYGWIN is in *features*.
